# pslab-app

./: .codacy.yaml  .gitignore  Fastfile  README.md  analysis_options.yaml  appdmg.json  build.gradle.kts  fix.py  fix_theirs.py  gradle.properties  io.pslab.PSLab.metainfo.xml  pubspec.yaml  versionName.txt
.github/: ISSUE_TEMPLATE  copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: general-issues.md  report-a-bug.md
.github/workflows/: clean-screenshots.yml  flutter_upgrade.yml  pull-request-closed.yml  pull-request-comment.yml  pull-request.yml  push-event.yml  release.yml
android/: settings.gradle
android/app/: build.gradle
app/: build.gradle.kts
docs/: Oscilloscope.md  downloads.html  gif_files.md
gradle/wrapper/: gradle-wrapper.properties
integration_test/: simple_test.dart
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: colors.dart  console_helper.dart  console_helper_dummy.dart  constants.dart  main.dart  oss_licenses.dart
lib/communication/: analytics_class.dart  commands_proto.dart  science_lab.dart  (+5 more)
linux/: 99-pslab.rules  CMakeLists.txt  my_application.cc  prep.sh  pslab.desktop
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
test/: about_us_screen_version_test.dart  mlx90614_communication_test.dart  mlx90614_provider_test.dart  oscilloscope_recording_metadata_test.dart  widget_test.dart
test_integration/: screenshots.dart  test_driver.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+363 files in other folders)
